--- a/MyApplication1/app/src/main/AndroidManifest.xml
+++ b/MyApplication1/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/downloads"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
@@ -14,6 +14,26 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".PartTwo">
+        </activity>
+        <activity android:name=".CheckTimeActivity">
+        </activity>
+        <activity android:name=".ClockActivity">
+        </activity>
+        <activity android:name=".CustomViewActivity_drawball">
+        </activity>
+        <activity android:name=".DrawBallActivity">
+        </activity>
+        <activity android:name=".ExpandableListView">
+        </activity>
+        <activity android:name=".ListviewWithSimpleAdpter">
+        </activity>
+        <activity android:name=".PicAtchPhone">
+        </activity>
+        <activity android:name=".PictureGridWithSimpleAdpter">
+        </activity>
+        <activity android:name=".ResistModel">
         </activity>
     </application>
 
