添加：弹框选择 添加：播放图片 注册：以上两项 绑定：按钮

--- a/MyApplication1/app/src/main/AndroidManifest.xml
+++ b/MyApplication1/app/src/main/AndroidManifest.xml
@@ -35,6 +35,10 @@
         </activity>
         <activity android:name=".ResistModel">
         </activity>
+        <activity android:name=".AlterSelect">
+        </activity>
+        <activity android:name=".PlayPicture">
+        </activity>
     </application>
 
 </manifest>
