添加：进度条（该版本API不支持目前方法查询后更换即可） 注册：进度条 记录

--- a/MyApplication1/app/src/main/AndroidManifest.xml
+++ b/MyApplication1/app/src/main/AndroidManifest.xml
@@ -39,6 +39,8 @@
         </activity>
         <activity android:name=".PlayPicture">
         </activity>
+        <activity android:name=".ProgresBar">
+        </activity>
     </application>
 
 </manifest>
