添加：拖动条 注册：拖动条 添加：文字切换加动画效果（该版本API不支持未加activity） 记录

--- a/MyApplication1/app/src/main/AndroidManifest.xml
+++ b/MyApplication1/app/src/main/AndroidManifest.xml
@@ -41,6 +41,8 @@
         </activity>
         <activity android:name=".ProgresBar">
         </activity>
+        <activity android:name=".ControlBar">
+        </activity>
     </application>
 
 </manifest>
