添加：Toast（此API暂不支持） 添加：Tab页 注册：toast、tab页 注册：tab页、toast

--- a/MyApplication1/app/src/main/AndroidManifest.xml
+++ b/MyApplication1/app/src/main/AndroidManifest.xml
@@ -43,6 +43,10 @@
         </activity>
         <activity android:name=".ControlBar">
         </activity>
+        <activity android:name=".Toast">
+        </activity>
+        <activity android:name=".TabPage">
+        </activity>
     </application>
 
 </manifest>
