--- a/MyApplication1/app/src/main/AndroidManifest.xml
+++ b/MyApplication1/app/src/main/AndroidManifest.xml
@@ -51,6 +51,10 @@
         </activity>
         <activity android:name=".Commen">
         </activity>
+        <activity android:name=".PartThree">
+        </activity>
+        <activity android:name=".PlanWar">
+        </activity>
         <!-- 添加操作闪光灯的权限 -->
         <uses-permission android:name="android.permission.FLASHLIGHT"/>
         <!-- 添加操作振动器的权限 -->
