--- a/MyApplication1/app/src/main/AndroidManifest.xml
+++ b/MyApplication1/app/src/main/AndroidManifest.xml
@@ -55,6 +55,9 @@
         </activity>
         <activity android:name=".PlanWar">
         </activity>
+        <activity android:name=".ChangScreen"
+            android:configChanges="orientation|screenSize">
+        </activity>
         <!-- 添加操作闪光灯的权限 -->
         <uses-permission android:name="android.permission.FLASHLIGHT"/>
         <!-- 添加操作振动器的权限 -->
