--- a/MyApplication1/app/src/main/AndroidManifest.xml
+++ b/MyApplication1/app/src/main/AndroidManifest.xml
@@ -58,6 +58,8 @@
         <activity android:name=".ChangScreen"
             android:configChanges="orientation|screenSize">
         </activity>
+        <activity android:name=".Calcunum">
+        </activity>
         <!-- 添加操作闪光灯的权限 -->
         <uses-permission android:name="android.permission.FLASHLIGHT"/>
         <!-- 添加操作振动器的权限 -->
