--- a/MyApplication1/app/src/main/AndroidManifest.xml
+++ b/MyApplication1/app/src/main/AndroidManifest.xml
@@ -60,6 +60,8 @@
         </activity>
         <activity android:name=".Calcunum">
         </activity>
+        <activity android:name=".ShowResist">
+        </activity>
         <!-- 添加操作闪光灯的权限 -->
         <uses-permission android:name="android.permission.FLASHLIGHT"/>
         <!-- 添加操作振动器的权限 -->
