--- a/MyApplication1/app/src/main/AndroidManifest.xml
+++ b/MyApplication1/app/src/main/AndroidManifest.xml
@@ -64,6 +64,13 @@
         </activity>
         <activity android:name=".GetPhone">
         </activity>
+        <activity android:name=".SlidePicture">
+        </activity>
+        <activity android:name=".Part5">
+        </activity>
+        <activity android:name=".PartSix">
+        </activity>
+
         <!-- 添加操作闪光灯的权限 -->
         <uses-permission android:name="android.permission.FLASHLIGHT"/>
         <!-- 添加操作振动器的权限 -->
