--- a/MyApplication1/app/src/main/AndroidManifest.xml
+++ b/MyApplication1/app/src/main/AndroidManifest.xml
@@ -70,6 +70,8 @@
         </activity>
         <activity android:name=".PartSix">
         </activity>
+        <activity android:name=".BackColorChange">
+        </activity>
 
         <!-- 添加操作闪光灯的权限 -->
         <uses-permission android:name="android.permission.FLASHLIGHT"/>
