--- a/MyApplication1/app/src/main/AndroidManifest.xml
+++ b/MyApplication1/app/src/main/AndroidManifest.xml
@@ -72,6 +72,10 @@
         </activity>
         <activity android:name=".BackColorChange">
         </activity>
+        <activity android:name=".PartSeven">
+        </activity>
+        <activity android:name=".DrawPanel">
+        </activity>
 
         <!-- 添加操作闪光灯的权限 -->
         <uses-permission android:name="android.permission.FLASHLIGHT"/>
