--- a/MyApplication1/app/src/main/AndroidManifest.xml
+++ b/MyApplication1/app/src/main/AndroidManifest.xml
@@ -76,6 +76,8 @@
         </activity>
         <activity android:name=".DrawPanel">
         </activity>
+        <activity android:name=".PlayBall">
+        </activity>
 
         <!-- 添加操作闪光灯的权限 -->
         <uses-permission android:name="android.permission.FLASHLIGHT"/>
