--- a/MyApplication1/app/src/main/AndroidManifest.xml
+++ b/MyApplication1/app/src/main/AndroidManifest.xml
@@ -80,6 +80,8 @@
         </activity>
         <activity android:name=".HitPicture">
         </activity>
+        <activity android:name=".ButterFly">
+        </activity>
 
         <!-- 添加操作闪光灯的权限 -->
         <uses-permission android:name="android.permission.FLASHLIGHT"/>
