添加：手势缩放图片 注册 绑定 记录

--- a/MyApplication1/app/src/main/AndroidManifest.xml
+++ b/MyApplication1/app/src/main/AndroidManifest.xml
@@ -88,6 +88,8 @@
         </activity>
         <activity android:name=".SDFileList">
         </activity>
+        <activity android:name=".GestruePicture">
+        </activity>
 
         <!-- 添加操作闪光灯的权限 -->
         <uses-permission android:name="android.permission.FLASHLIGHT"/>
