--- a/MyApplication1/app/src/main/AndroidManifest.xml
+++ b/MyApplication1/app/src/main/AndroidManifest.xml
@@ -90,6 +90,8 @@
         </activity>
         <activity android:name=".GestruePicture">
         </activity>
+        <activity android:name=".AddGesture">
+        </activity>
 
         <!-- 添加操作闪光灯的权限 -->
         <uses-permission android:name="android.permission.FLASHLIGHT"/>
