--- a/MyApplication1/app/src/main/AndroidManifest.xml
+++ b/MyApplication1/app/src/main/AndroidManifest.xml
@@ -96,6 +96,8 @@
         </activity>
         <activity android:name=".GetPhoneByProvider">
         </activity>
+        <activity android:name=".ShowPicture">
+        </activity>
 
         <!-- 添加操作闪光灯的权限 -->
         <uses-permission android:name="android.permission.FLASHLIGHT"/>
@@ -105,6 +107,10 @@
         <uses-permission android:name="android.permission.READ_CONTACTS"/>
         <!--添加写联系人的权限-->
         <uses-permission android:name="android.permission.WRITE_CONTACTS"/>
+        <!--添加读取外部存储的访问权限-->
+        <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+        <!--添加写入外部存储的访问权限-->
+        <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     </application>
 
 </manifest>
