--- a/MyApplication1/app/src/main/AndroidManifest.xml
+++ b/MyApplication1/app/src/main/AndroidManifest.xml
@@ -98,6 +98,12 @@
         </activity>
         <activity android:name=".ShowPicture">
         </activity>
+        <activity android:name=".Part10">
+        </activity>
+        <activity android:name=".GetCountByService">
+        </activity>
+        <service android:name=".ServiceForCount">
+        </service>
 
         <!-- 添加操作闪光灯的权限 -->
         <uses-permission android:name="android.permission.FLASHLIGHT"/>
