添加：迷你浏览器 注册 绑定 记录

--- a/MyApplication1/app/src/main/AndroidManifest.xml
+++ b/MyApplication1/app/src/main/AndroidManifest.xml
@@ -118,6 +118,8 @@
         </service>
         <activity android:name=".PeopleChat">
         </activity>
+        <activity android:name=".SmallBrowser">
+        </activity>
         <!--定一个BroadcastReceiver,监听系统开机广播-->
         <receiver android:name=".AutoService">
             <intent-filter>
