--- a/MyApplication1/app/src/main/AndroidManifest.xml
+++ b/MyApplication1/app/src/main/AndroidManifest.xml
@@ -120,6 +120,8 @@
         </activity>
         <activity android:name=".SmallBrowser">
         </activity>
+        <activity android:name=".BrowserToHtml">
+        </activity>
         <!--定一个BroadcastReceiver,监听系统开机广播-->
         <receiver android:name=".AutoService">
             <intent-filter>
