添加：html调用webview 绑定 记录 注册

--- a/MyApplication1/app/src/main/AndroidManifest.xml
+++ b/MyApplication1/app/src/main/AndroidManifest.xml
@@ -122,6 +122,8 @@
         </activity>
         <activity android:name=".BrowserToHtml">
         </activity>
+        <activity android:name=".HtmlToWebView">
+        </activity>
         <!--定一个BroadcastReceiver,监听系统开机广播-->
         <receiver android:name=".AutoService">
             <intent-filter>
